--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "version": "0.1.1",
     "description": "Censors words out of text",
     "main": "censortext",
+    "repository":
+    {
+        "type": "git",
+        "url": "https://github.com/MrDrProfX/censorify.git"
+    },
+    "keywords": ["censor", "words"],
     "dependencies": {},
     "engines":
     {
